# nubot

./: README.md  colcon.pkg  package.xml  setup.cfg  setup.py
config/: nubot_urdf.rviz
env-hooks/: nubot.dsv
launch/: nubot_rviz.launch.py  simulate.launch.xml  world.launch.xml
urdf/: nubot.gazebo.xacro  nubot.urdf.xacro
worlds/: nubot_simple.sdf  nubot_world.sdf
