<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nubot</name>
  <version>0.0.0</version>
  <description>A simulated robot with lidar</description>
  <maintainer email="elwin@northwestern.edu">elwin</maintainer>
  <license>MIT</license>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
